--- a/lib/pg_siphon_management_web/controllers/page_html/home.html.heex
+++ b/lib/pg_siphon_management_web/controllers/page_html/home.html.heex
@@ -1,12 +1,1 @@
-<div class="card mt-4">
-  <div class="title">
-    Phoenix + Tailwind
-  </div>
-  <div class="description">
-    A fiery wind at your back?
-    (<a href="#">click me</a>)
-  </div>
-</div>
-<div class="test">
-  Here!
-</div>
+<div>Home</div>
