--- a/lib/pg_siphon_management_web/components/layouts/app.html.heex
+++ b/lib/pg_siphon_management_web/components/layouts/app.html.heex
@@ -1,32 +1,39 @@
-<header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
-    <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
-      </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
+<div class="flex h-screen">
+  <!-- Sidebar -->
+  <div class="w-10 bg-gray-800 text-white flex flex-col items-center">
+    <div class="p-2 pt-4 text-center text-xs font-mono [writing-mode:vertical-lr]">PgSiphon</div>
+    <nav class="flex-1 px-4 py-4 space-y-2">
+      <.nav_link href={~p"/"} tooltip="Home">
+        <Heroicons.icon name="home" type="mini" class="h-4 w-4" />
+      </.nav_link>
+      <.nav_link href={~p"/status"} tooltip="Live">
+        <Heroicons.icon name="bars-4" type="mini" class="h-4 w-4" />
+      </.nav_link>
+    </nav>
+    <div class="flex-3 px-4 py-4 space-y-2"></div>
+  </div>
+  <!-- Main Content -->
+  <div class="flex-1 flex flex-col">
+    <!-- Top Bar -->
+    <div class="w-full h-8 bg-gray-300 text-gray-800 flex">
+      <div class="flex-1 flex items-center justify-start">
+        <div class="pl-4 p-2 text-center text-xs font-mono"></div>
+      </div>
+      <div class="flex-1 flex items-center justify-center">
+        <div class="p-2 text-center text-xs font-mono"></div>
+      </div>
+      <div class="flex-1 flex items-center justify-end">
+        <div class="pr-4 p-2 text-center text-xs font-mono">
+          <div class="flex space-x-2">
+            <span class="w-3 h-3 bg-green-500 rounded-full lighthouse"></span>
+            <span class="font-mono">OK</span>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
-      </a>
+    <div class="flex-1 p-4">
+      <.flash_group flash={@flash} />
+      <%= @inner_content %>
     </div>
   </div>
-</header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-4xl">
-    <.flash_group flash={@flash} />
-    <%= @inner_content %>
-  </div>
-</main>
+</div>
