--- a/lib/pg_siphon_management_web/controllers/page_html/home.html.heex
+++ b/lib/pg_siphon_management_web/controllers/page_html/home.html.heex
@@ -1,1 +1,13 @@
-<div>Home</div>
+<.two_columns>
+  <:left_section>
+    <.accordion_container id="accordion-1">
+      <.accordion_entry title="test">
+        Here!
+      </.accordion_entry>
+      <.accordion_entry title="test2">
+        Here 2!
+      </.accordion_entry>
+    </.accordion_container>
+  </:left_section>
+  <:right_section></:right_section>
+</.two_columns>
