--- a/assets/css/scss/_animations.scss
+++ b/assets/css/scss/_animations.scss
@@ -13,17 +13,25 @@
 }
 
 @keyframes lighthouse {
-  0%, 100% {
-    opacity: 1;
+  0% {
+    opacity: 0;
     transform: scale(1);
   }
+  25% {
+    opacity: 0;
+    transform: scale(1.1);
+  }
   50% {
-    opacity: 0.5;
-    transform: scale(1.25);
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1);
   }
 }
 
 .lighthouse {
-  animation: lighthouse 2s infinite ease-in-out;
+  animation: lighthouse 4s infinite ease-in-out;
 }
 
