feat: further ui for processing files for analytics

--- a/lib/pg_siphon_management_web/components/layouts/app.html.heex
+++ b/lib/pg_siphon_management_web/components/layouts/app.html.heex
@@ -17,6 +17,14 @@
         icon="presentation-chart-line"
       >
       </.nav_link>
+      <.nav_link
+        href={~p"/comparison"}
+        tooltip="Comparison"
+        route={:comparison}
+        current_path={@live_action}
+        icon="view-columns"
+      >
+      </.nav_link>
     </:nav_links>
     <:bottom_links></:bottom_links>
   </.sidebar>
