task: add page and links

--- a/lib/pg_siphon_management_web/components/layouts/app.html.heex
+++ b/lib/pg_siphon_management_web/components/layouts/app.html.heex
@@ -18,11 +18,11 @@
       >
       </.nav_link>
       <.nav_link
-        href={~p"/comparison"}
-        tooltip="Comparison"
-        route={:comparison}
+        href={~p"/query_breakdown"}
+        tooltip="Query Breakdown"
+        route={:query_breakdown}
         current_path={@live_action}
-        icon="view-columns"
+        icon="rectangle-group"
       >
       </.nav_link>
     </:nav_links>
