--- a/lib/pg_siphon_management_web/components/layouts/root.html.heex
+++ b/lib/pg_siphon_management_web/components/layouts/root.html.heex
@@ -11,7 +11,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-gray-900">
+  <body class="bg-white dark:bg-gray-900 text-black dark:text-white">
     <%= @inner_content %>
   </body>
 </html>
