task: proxy/status live complete

--- a/lib/pg_siphon_management_web/components/layouts/app.html.heex
+++ b/lib/pg_siphon_management_web/components/layouts/app.html.heex
@@ -33,11 +33,11 @@
     <.topbar>
       <:left_slot>
         <div class="overflow-hidden whitespace-nowrap overflow-ellipsis">
-          <span class="text-gray-600 text-xs font-mono">
+          <span class="text-gray-400 dark:text-gray-500 text-xs font-mono">
             / home
           </span>
-          <span class="text-gray-600 text-xs font-mono"> / </span>
-          <span class="text-gray-300 text-xs font-mono">
+          <span class="text-gray-600 dark:text-gray-500 text-xs font-mono"> / </span>
+          <span class="text-gray-800 dark:text-gray-300 text-xs font-mono">
             <%= @live_action %>
           </span>
         </div>
@@ -60,7 +60,7 @@
           </div>
           <%!-- End toggle for darkmode --%>
           <div class="border-l border-gray-700">
-            <span class="font-mono text-gray-300 pl-6">
+            <span class="font-mono text-gray-500 dark:text-gray-300 pl-6">
               Help
             </span>
           </div>
