--- a/lib/pg_siphon_management_web/components/layouts/app.html.heex
+++ b/lib/pg_siphon_management_web/components/layouts/app.html.heex
@@ -17,14 +17,15 @@
         icon="presentation-chart-line"
       >
       </.nav_link>
-      <.nav_link
+      <%!-- Removal for now, i dont think itll stay long as feature --%>
+      <%!-- <.nav_link
         href={~p"/query_breakdown"}
         tooltip="Query Breakdown"
         route={:query_breakdown}
         current_path={@live_action}
         icon="rectangle-group"
       >
-      </.nav_link>
+      </.nav_link> --%>
     </:nav_links>
     <:bottom_links></:bottom_links>
   </.sidebar>
